# smart-interviewer

./: .gitignore  README.md  app.js  index.html  jsconfig.json  package-lock.json  package.json  server.js  tailwind.config.js
presage_quickstart/: CMakeLists.txt  hello_vitals.cpp
public/: app.js  index.html
public/mascot/: README.md
src/app/: globals.css  layout.js  page.js
src/app/api/generate-report/: route.js
src/app/api/log-transcript/: route.js
src/app/api/quick-feedback/: route.js
src/app/api/start-vitals/: route.js
src/app/api/transcribe/: route.js
src/app/api/tts/: route.js
src/app/api/vitals/: route.js
src/app/interview/: page.js
src/app/report/: page.js
src/app/results/: page.js
src/components/: CameraFeed.jsx  PNGTuberMascot.jsx
src/components/PreInterview/: InstructionsPanel.jsx  InterviewTypeSelector.jsx  UserInfoForm.jsx
src/components/Results/: LoadingSpinner.jsx  ReportDisplay.jsx
src/components/shared/: Logo.jsx
src/components/ui/: AudioVisualizer.js  CompanyTicker.jsx  FeedbackOverlay.jsx  GlassButton.jsx  GlassCard.jsx  GlassDropdown.jsx  GlassInput.jsx  GradientBackground.jsx
src/data/: questions.json  transitions.json
src/data/questions/: behavioral-general.json  frontend-engineering.json  system-design.json
src/lib/: constants.js  dataAggregator.js  gemini.js  promptBuilder.js  utils.js
